# Coding-Challenge

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: Circle.hpp  Rectangle.hpp  Shape.hpp  ShapeFactory.hpp  Square.hpp  Triangle.hpp
src/: Circle.cpp  Rectangle.cpp  Shape.cpp  ShapeFactory.cpp  Square.cpp  Triangle.cpp  main.cpp
